# dev-boxes

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  babel.config.js  babel.config.json  createPackage.js  flake.nix  jest.config.js  jest.config.ts  package.json  pyproject.toml
.pre-commit/: check_media_size.sh
MacOS/: README.md  flake.nix  install.sh  starship.toml
MacOS/launchd/: default.nix  samba.nix
docker/dockerfiles/alpine/arm64/: Dockerfile.dev
